[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
config = "0.13.3"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.9.4"
rustyline = "12.0.0"
serde = "1.0.188"
serde_derive = "1.0.188"
sqlparser = "0.37.0"
tokio = { version = "1.32.0", features = ["full"] }

